src/main/java/org/semanticweb/drew/dlprogram/parser/DLProgramParser.java
/* Generated By:JavaCC: Do not edit this line. DLProgramParser.java */
package org.semanticweb.drew.dlprogram.parser;

import org.semanticweb.drew.dlprogram.model.*;
import java.sql.Types;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import org.semanticweb.owlapi.model.OWLLogicalEntity;
import org.semanticweb.owlapi.apibinding.OWLManager;
import org.semanticweb.owlapi.model.IRI;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

public class DLProgramParser implements DLProgramParserConstants {
  final static Logger logger = LoggerFactory.getLogger(DLProgramParser.class);
  Map < String, String > namespaces = new HashMap < String, String > ();

  public void process() throws ParseException
  {}

  public void adjustDLInputOperationArity(DLProgram program)
  {
    for (DLInputSignature signature : program.getDLInputSignatures())
    {
      for (DLInputOperation op : signature.getOperations())
      {
        NormalPredicate inputPredicate = op.getInputPredicate();
        String name = inputPredicate.getName();
        int arity = CacheManager.getInstance().getArity(name);
        inputPredicate.setArity(arity);
      }
    }
  }

  final public String dlPredicate() throws ParseException {
  String name;
    if (jj_2_1(2147483647)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
        jj_consume_token(VARIABLE);
        break;
      case DLPREDICATE:
        jj_consume_token(DLPREDICATE);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        String key = token.image;
        String namespace = namespaces.get(key);
      jj_consume_token(COLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
        jj_consume_token(VARIABLE);
        break;
      case DLPREDICATE:
        jj_consume_token(DLPREDICATE);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        name = namespace + token.image;
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case VARIABLE:
      case DLPREDICATE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VARIABLE:
          jj_consume_token(VARIABLE);
          break;
        case DLPREDICATE:
          jj_consume_token(DLPREDICATE);
          break;
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      name = token.image;
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

  final public DLInputOperation dlInputOperation() throws ParseException {
  DLInputOperation op = new DLInputOperation();
  String name;
    name = dlPredicate();
      //logger.debug("dlPredicat: " + token.image);
      //FIXME: role is possible here
      OWLLogicalEntity dlPredicate = OWLManager.getOWLDataFactory().getOWLClass(IRI.create(name));
      op.setDLPredicate(dlPredicate);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UPLUS:
      jj_consume_token(UPLUS);
        op.setType(DLInputOperator.U_PLUS);
      break;
    case UMINUS:
      jj_consume_token(UMINUS);
        op.setType(DLInputOperator.U_MINUS);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      name = dlPredicate();
      //The arity will be set later
      int arity = - 1;
      NormalPredicate predicate = CacheManager.getInstance().getPredicate(name, arity);
      op.setInputPredicate(predicate);
    {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  final public DLInputSignature dlInputSignature() throws ParseException {
  DLInputSignature signature = new DLInputSignature();
  DLInputOperation op;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case VARIABLE:
    case DLPREDICATE:
      op = dlInputOperation();
      signature.getOperations().add(op);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONJUNCTION:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
        jj_consume_token(CONJUNCTION);
        op = dlInputOperation();
        signature.getOperations().add(op);
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    {if (true) return signature;}
    throw new Error("Missing return statement in function");
  }

  final public DLAtomPredicate dlAtomPredicate() throws ParseException {
  DLAtomPredicate predicate = new DLAtomPredicate();
  DLInputSignature signature;
  String name;
  OWLLogicalEntity query;
    jj_consume_token(DL_ATOM);
    jj_consume_token(LEFT_SQUARE_BRACKET);
    signature = dlInputSignature();
      predicate.setInputSignature(signature);
    jj_consume_token(31);
    name = dlPredicate();
      query = OWLManager.getOWLDataFactory().getOWLClass(IRI.create(name));
      predicate.setQuery(query);
    jj_consume_token(RIGHT_SQUARE_BRACKET);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
  }

  final public Constant constant() throws ParseException {
  String name;
  int type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      jj_consume_token(INTEGER);
      name = token.image;
      type = Types.INTEGER;
      {if (true) return CacheManager.getInstance().getConstant(name, type);}
      break;
    case STRING:
      jj_consume_token(STRING);
      name = token.image.substring(1, token.image.length() - 1);
      type = Types.VARCHAR;
      {if (true) return CacheManager.getInstance().getConstant(name, type);}
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      name = token.image;
      type = Types.VARCHAR;
      {if (true) return CacheManager.getInstance().getConstant(name, type);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

    throw new Error("Missing return statement in function");
  }

  final public Term variable() throws ParseException {
    jj_consume_token(VARIABLE);
    {if (true) return CacheManager.getInstance().getVariable(token.image);}
    throw new Error("Missing return statement in function");
  }

  final public Functor functor() throws ParseException {
  Functor functor = new Functor();
    jj_consume_token(IDENTIFIER);
    functor.setName(token.image);
    {if (true) return functor;}
    throw new Error("Missing return statement in function");
  }

  final public Function function() throws ParseException {
  Function function = new Function();
  Functor functor;
  Term term;
    functor = functor();
    function.setFunctor(functor);
    jj_consume_token(LEFTBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case INTEGER:
    case STRING:
    case VARIABLE:
    case LEFTBRACKET:
      term = term();
      function.getTerms().add(term);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONJUNCTION:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_2;
        }
        jj_consume_token(CONJUNCTION);
        term = term();
        function.getTerms().add(term);
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RIGHTBRACKET);
    {if (true) return function;}
    throw new Error("Missing return statement in function");
  }

  final public Term unary() throws ParseException {
  Term term;
    if (jj_2_2(2147483647)) {
      term = function();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case INTEGER:
      case STRING:
        term = constant();
        break;
      case VARIABLE:
        term = variable();
        break;
      case LEFTBRACKET:
        jj_consume_token(LEFTBRACKET);
        term = additive();
        jj_consume_token(RIGHTBRACKET);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return term;}
    throw new Error("Missing return statement in function");
  }

  final public Term multiplicative() throws ParseException {
  Term left, right;
  Token token;
    left = unary();

    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
        token = jj_consume_token(TIMES);
        break;
      case DIVIDE:
        token = jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = unary();
      Function function = new Function();
      Functor functor = new Functor();
      functor.setName(token.image);
      function.setFunctor(functor);
      function.getTerms().add(left);
      function.getTerms().add(right);
      left = function;
    }
    {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Term additive() throws ParseException {
  Term left, right;
  Token token;
    left = multiplicative();

    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        token = jj_consume_token(PLUS);
        break;
      case MINUS:
        token = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = multiplicative();
      Function function = new Function();
      Functor functor = new Functor();
      functor.setName(token.image);
      function.setFunctor(functor);
      function.getTerms().add(left);
      function.getTerms().add(right);
      left = function;
    }
    {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Term term() throws ParseException {
  Term term;
    term = additive();
    {if (true) return term;}
    throw new Error("Missing return statement in function");
  }

//Predicate predicate() :
//{
//	Predicate predicate = new Predicate();
//}
//{
//	<IDENTIFIER>
//	{
//		predicate.setName(token.image);
//		return predicate;
//	}
//}
  final public Literal literal() throws ParseException {
  Literal literal = new Literal();
  Predicate predicate = null;
  String name = null;
  Term term;
  int arity = 0;
  boolean isDLAtomPredicate = false;
    if (jj_2_3(2147483647)) {
      term = term();
    literal.getTerms().add(term);
      jj_consume_token(COMPARISON);
    predicate = CacheManager.getInstance().getPredicate(token.image, 2);
    literal.setPredicate(predicate);
      term = term();
    literal.getTerms().add(term);
    {if (true) return literal;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DL_ATOM:
      case IDENTIFIER:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DL_ATOM:
          predicate = dlAtomPredicate();
      isDLAtomPredicate = true;
          break;
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
      name = token.image;
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEFTBRACKET:
          jj_consume_token(LEFTBRACKET);
          term = term();
      literal.getTerms().add(term);
      arity++;
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case CONJUNCTION:
              ;
              break;
            default:
              jj_la1[16] = jj_gen;
              break label_5;
            }
            jj_consume_token(CONJUNCTION);
            term = term();
        literal.getTerms().add(term);
        arity++;
          }
          jj_consume_token(RIGHTBRACKET);
          break;
        default:
          jj_la1[17] = jj_gen;
          ;
        }
    if (!isDLAtomPredicate)
    {
      predicate = CacheManager.getInstance().getPredicate(name, arity);
    }
    else
    {
      predicate.setArity(arity);
    }
    literal.setPredicate(predicate);
    {if (true) return literal;}
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Clause clause() throws ParseException {
  Clause clause = new Clause();
  Literal literal;
  boolean not = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DL_ATOM:
    case IDENTIFIER:
    case INTEGER:
    case STRING:
    case VARIABLE:
    case LEFTBRACKET:
      literal = literal();
      clause.setHead(literal);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPLY:
      jj_consume_token(IMPLY);
      // initialize the not state
      not = false;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAF:
        jj_consume_token(NAF);
        not = true;
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      literal = literal();
      if (not)
      {
        clause.getNegativeBody().add(literal);
      }
      else
      {
        clause.getPositiveBody().add(literal);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONJUNCTION:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_6;
        }
        jj_consume_token(CONJUNCTION);
        // initialize the not state
        not = false;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NAF:
          jj_consume_token(NAF);
          not = true;
          break;
        default:
          jj_la1[22] = jj_gen;
          ;
        }
        literal = literal();
        if (not)
        {
          clause.getNegativeBody().add(literal);
        }
        else
        {
          clause.getPositiveBody().add(literal);
        }
      }
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(ENDOFSTATEMENT);
    if (clause.getBody().size() == 0)
    {
      clause.getPositiveBody().add(Literal.TRUE);
    }
    {if (true) return clause;}
    throw new Error("Missing return statement in function");
  }

  final public void namespace() throws ParseException {
  String key, value;
    jj_consume_token(NAMESPACE);
    jj_consume_token(LEFTBRACKET);
    jj_consume_token(STRING);
    key = token.image.substring(1, token.image.length() - 1);
    jj_consume_token(CONJUNCTION);
    jj_consume_token(STRING);
    value = token.image.substring(1, token.image.length() - 1);
    jj_consume_token(RIGHTBRACKET);
    jj_consume_token(ENDOFSTATEMENT);
    namespaces.put(key, value);
  }

  final public DLProgram program() throws ParseException {
  DLProgram program = new DLProgram();
  Clause clause;
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAMESPACE:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_7;
      }
      namespace();
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPLY:
      case ENDOFSTATEMENT:
      case DL_ATOM:
      case IDENTIFIER:
      case INTEGER:
      case STRING:
      case VARIABLE:
      case LEFTBRACKET:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_8;
      }
      clause = clause();
      if (clause.getHead().equals(Literal.FALSE) && (clause.getPositiveBody().contains(Literal.TRUE)))
      { // skip empty clause
      }
      else
      {
        program.getClauses().add(clause);
      }
    }
    jj_consume_token(0);
    adjustDLInputOperationArity(program);
    {if (true) return program;}
    throw new Error("Missing return statement in function");
  }

  final public List < Literal > getModel() throws ParseException {
  List < Literal > literals = new ArrayList < Literal > ();
  Literal literal;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      jj_consume_token(TRUE);
      jj_consume_token(COLON);
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(32);
    literal = literal();
    literals.add(literal);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONJUNCTION:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_9;
      }
      jj_consume_token(CONJUNCTION);
      literal = literal();
      literals.add(literal);
    }
    jj_consume_token(33);
    {if (true) return literals;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }
